<resources>
    <string name="app_name" translatable="false">Holy Quran</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="next">continue</string>
    <string name="select_language_title">Select the translation language:</string>
    <string name="sura_1">1. Al-Fatiha (The Opening)</string>
    <string name="sura_2">2. Al-Baqarah (The Cow)</string>
    <string name="sura_3">3. Aali Imran (The Family of Imran)</string>
    <string name="sura_4">4. An-Nisa (The Women)</string>
    <string name="sura_5">5. Al-Maidah (The Table Spread)</string>
    <string name="sura_6">6. Al-An\'am (The Cattle)</string>
    <string name="sura_7">7. Al-A\'raf (The Heights)</string>
    <string name="sura_8">8. Al-Anfal (The Spoils of War)</string>
    <string name="sura_9">9. At-Tawbah (The Repentance)</string>
    <string name="sura_10">10. Yunus (Jonah)</string>
    <string name="sura_11">11. Hud (Hud)</string>
    <string name="sura_12">12. Yusuf (Joseph)</string>
    <string name="sura_13">13. Ar-Ra\'d (The Thunder)</string>
    <string name="sura_14">14. Ibrahim (Abraham)</string>
    <string name="sura_15">15. Al-Hijr (The Rocky Tract)</string>
    <string name="sura_16">16. An-Nahl (The Bee)</string>
    <string name="sura_17">17. Al-Isra (The Night Journey)</string>
    <string name="sura_18">18. Al-Kahf (The Cave)</string>
    <string name="sura_19">19. Maryam (Mary)</string>
    <string name="sura_20">20. Ta-Ha (Ta-Ha)</string>
    <string name="sura_21">21. Al-Anbiya (The Prophets)</string>
    <string name="sura_22">22. Al-Hajj (The Pilgrimage)</string>
    <string name="sura_23">23. Al-Mu\'minun (The Believers)</string>
    <string name="sura_24">24. An-Nur (The Light)</string>
    <string name="sura_25">25. Al-Furqan (The Criterion)</string>
    <string name="sura_26">26. Ash-Shu\'ara (The Poets)</string>
    <string name="sura_27">27. An-Naml (The Ant)</string>
    <string name="sura_28">28. Al-Qasas (The Stories)</string>
    <string name="sura_29">29. Al-Ankabut (The Spider)</string>
    <string name="sura_30">30. Ar-Rum (The Romans)</string>
    <string name="sura_31">31. Luqman (Luqman)</string>
    <string name="sura_32">32. As-Sajda (The Prostration)</string>
    <string name="sura_33">33. Al-Ahzab (The Combined Forces)</string>
    <string name="sura_34">34. Saba (Sheba)</string>
    <string name="sura_35">35. Fatir (The Originator)</string>
    <string name="sura_36">36. Ya-Sin (Ya-Sin)</string>
    <string name="sura_37">37. As-Saffat (Those who set the Ranks)</string>
    <string name="sura_38">38. Sad (The Letter Sad)</string>
    <string name="sura_39">39. Az-Zumar (The Troops)</string>
    <string name="sura_40">40. Ghafir (The Forgiver)</string>
    <string name="sura_41">41. Fussilat (Explained in Detail)</string>
    <string name="sura_42">42. Ash-Shura (The Consultation)</string>
    <string name="sura_43">43. Az-Zukhruf (The Gold Adornments)</string>
    <string name="sura_44">44. Ad-Dukhan (The Smoke)</string>
    <string name="sura_45">45. Al-Jathiya (The Crouching)</string>
    <string name="sura_46">46. Al-Ahqaf (The Wind-Curved Sandhills)</string>
    <string name="sura_47">47. Muhammad (Muhammad)</string>
    <string name="sura_48">48. Al-Fath (The Victory)</string>
    <string name="sura_49">49. Al-Hujurat (The Rooms)</string>
    <string name="sura_50">50. Qaf (The Letter Qaf)</string>
    <string name="sura_51">51. Adh-Dhariyat (The Winnowing Winds)</string>
    <string name="sura_52">52. At-Tur (The Mount)</string>
    <string name="sura_53">53. An-Najm (The Star)</string>
    <string name="sura_54">54. Al-Qamar (The Moon)</string>
    <string name="sura_55">55. Ar-Rahman (The Beneficent)</string>
    <string name="sura_56">56. Al-Waqia (The Inevitable)</string>
    <string name="sura_57">57. Al-Hadid (The Iron)</string>
    <string name="sura_58">58. Al-Mujadila (The Pleading Woman)</string>
    <string name="sura_59">59. Al-Hashr (The Exile)</string>
    <string name="sura_60">60. Al-Mumtahina (She that is to be examined)</string>
    <string name="sura_61">61. As-Saff (The Ranks)</string>
    <string name="sura_62">62. Al-Jumua (The Congregation)</string>
    <string name="sura_63">63. Al-Munafiqun (The Hypocrites)</string>
    <string name="sura_64">64. At-Taghabun (The Mutual Disillusion)</string>
    <string name="sura_65">65. At-Talaq (The Divorce)</string>
    <string name="sura_66">66. At-Tahrim (The Prohibition)</string>
    <string name="sura_67">67. Al-Mulk (The Sovereignty)</string>
    <string name="sura_68">68. Al-Qalam (The Pen)</string>
    <string name="sura_69">69. Al-Haaqqa (The Reality)</string>
    <string name="sura_70">70. Al-Maarij (The Ascending Stairways)</string>
    <string name="sura_71">71. Nuh (Noah)</string>
    <string name="sura_72">72. Al-Jinn (The Jinn)</string>
    <string name="sura_73">73. Al-Muzzammil (The Enshrouded One)</string>
    <string name="sura_74">74. Al-Muddathir (The Cloaked One)</string>
    <string name="sura_75">75. Al-Qiyama (The Resurrection)</string>
    <string name="sura_76">76. Al-Insan (Man)</string>
    <string name="sura_77">77. Al-Mursalat (The Emissaries)</string>
    <string name="sura_78">78. An-Naba (The Tidings)</string>
    <string name="sura_79">79. An-Naziat (Those who drag forth)</string>
    <string name="sura_80">80. Abasa (He frowned)</string>
    <string name="sura_81">81. At-Takwir (The Overthrowing)</string>
    <string name="sura_82">82. Al-Infitar (The Cleaving)</string>
    <string name="sura_83">83. Al-Mutaffifin (Defrauding)</string>
    <string name="sura_84">84. Al-Inshiqaq (The Splitting Open)</string>
    <string name="sura_85">85. Al-Buruj (The Mansions of the Stars)</string>
    <string name="sura_86">86. At-Tariq (The Morning Star)</string>
    <string name="sura_87">87. Al-Ala (The Most High)</string>
    <string name="sura_88">88. Al-Ghashiya (The Overwhelming)</string>
    <string name="sura_89">89. Al-Fajr (The Dawn)</string>
    <string name="sura_90">90. Al-Balad (The City)</string>
    <string name="sura_91">91. Ash-Shams (The Sun)</string>
    <string name="sura_92">92. Al-Lail (The Night)</string>
    <string name="sura_93">93. Ad-Duhaa (The Morning Hours)</string>
    <string name="sura_94">94. Ash-Sharh (The Relief)</string>
    <string name="sura_95">95. At-Tin (The Fig)</string>
    <string name="sura_96">96. Al-Alaq (The Clot)</string>
    <string name="sura_97">97. Al-Qadr (The Power)</string>
    <string name="sura_98">98. Al-Bayyina (The Clear Proof)</string>
    <string name="sura_99">99. Az-Zalzalah (The Earthquake)</string>
    <string name="sura_100">100. Al-Adiyat (The Courser)</string>
    <string name="sura_101">101. Al-Qaria (The Striking Hour)</string>
    <string name="sura_102">102. At-Takathur (The Rivalry in world increase)</string>
    <string name="sura_103">103. Al-Asr (The Time)</string>
    <string name="sura_104">104. Al-Humazah (The Slanderer)</string>
    <string name="sura_105">105. Al-Fil (The Elephant)</string>
    <string name="sura_106">106. Quraish (Quraish)</string>
    <string name="sura_107">107. Al-Ma\'un (The Small Kindnesses)</string>
    <string name="sura_108">108. Al-Kawthar (The Abundance)</string>
    <string name="sura_109">109. Al-Kafirun (The Disbelievers)</string>
    <string name="sura_110">110. An-Nasr (The Divine Support)</string>
    <string name="sura_111">111. Al-Masad (The Palm Fiber)</string>
    <string name="sura_112">112. Al-Ikhlas (The Sincerity)</string>
    <string name="sura_113">113. Al-Falaq (The Daybreak)</string>
    <string name="sura_114">114. An-Nas (The Mankind)</string>
    <string name="settings">Settings</string>
    <string name="language">language:</string>
    <string name="save">Apply</string>
    <string name="Names">99 Names of Allah</string>
    <string-array name="languages_array">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string name="info">The Reader: Muhammad Al Luhaidan\nTranslated into Russian by Elmir Kuliyev
    </string>

    <string name="NamesOfGod">\n 1. Allah (The One God)\n
2. Ar-Rahman (The Most Gracious to all in this world)\n
3. Ar-Rahim (The Most Merciful to believers in the hereafter)\n
4. Al-Malik (The Sovereign of all)\n
5. Al-Quddus (Free from defects)\n
6. As-Salam (The Giver of peace and safety to His creations)\n
7. Al-Mu\'min (The Giver of security and trust to His faithful servants)\n
8. Al-Muhaymin (The Guardian)\n
9. Al-Aziz (The Almighty, The Invincible)\n
10. Al-Jabbar (The Compeller, The Restorer)\n
11. Al-Mutakabbir (The Sole Possessor of Glory)\n
12. Al-Khaliq (The Creator)\n
13. Al-Bari\' (The Evolver, The Fashioner)\n
14. Al-Musawwir (The Fashioner of forms)\n
15. Al-Ghaffar (The Constant Forgiver)\n
16. Al-Kahhar (The All-Prevailing One)\n
17. Al-Wahhab (The Supreme Bestower)\n
18. Ar-Razzaq (The Provider)\n
19. Al-Fattah (The Opener of Goodness)\n
20. Al-\'Alim (The All-Knowing)\n
21. Al-Qabid (The Withholder)\n
22. Al-Basit (The Extender)\n
23. Al-Hafid (The Reducer)\n
24. Ar-Rafi\' (The Exalter)\n
25. Al-Mu\'izz (The Honourer)\n
26. Al-Mudhill (The Dishonourer)\n
27. As-Sami\' (The All-Hearing)\n
28. Al-Basir (The All-Seeing)\n
29. Al-Hakam (The Impartial Judge)\n
30. Al-\'Adl (The Utterly Just)\n
31. Al-Latif (The Subtle One)\n
32. Al-Khabir (The All-Aware)\n
33. Al-Halim (The Forbearing)\n
34. Al-\'Azim (The Magnificent)\n
35. Al-Ghafur (The Great Forgiver)\n
36. Ash-Shakur (The Most Appreciative)\n
37. Al-\'Aliy (The Most High, The Exalted)\n
38. Al-Kabir (The Most Great)\n
39. Al-Hafiz (The Preserver)\n
40. Al-Muqit (The Sustainer)\n
41. Al-Hasib (The Reckoner)\n
42. Al-Jalil (The Majestic)\n
43. Al-Karim (The Generous)\n
44. Ar-Raqib (The Watchful)\n
45. Al-Mujib (The Responsive One)\n
46. Al-Wasi\' (The All-Encompassing)\n
47. Al-Hakim (The All-Wise)\n
48. Al-Wadud (The Most Loving)\n
49. Al-Majid (The Glorious)\n
50. Al-Ba\'ith (The Resurrector)\n
51. Ash-Shahid (The Witness)\n
52. Al-Haqq (The Absolute Truth)\n
53. Al-Wakil (The Trustee)\n
54. Al-Qawiyy (The All-Strong)\n
55. Al-Matin (The Firm, The Steadfast)\n
56. Al-Waliyy (The Protecting Associate)\n
57. Al-Hamid (The Praiseworthy)\n
58. Al-Muhsi (The All-Enumerating)\n
59. Al-Mubdi\' (The Originator)\n
60. Al-Mu\'id (The Restorer)\n
61. Al-Muhyi (The Giver of Life)\n
62. Al-Mumit (The Creator of Death)\n
63. Al-Hayy (The Ever-Living)\n
64. Al-Qayyum (The Sustainer)\n
65. Al-Wajid (The Perceiver)\n
66. Al-Majid (The Illustrious)\n
67. Al-Wahid (The One)\n
68. As-Samad (The Eternal)\n
69. Al-Qadir (The Omnipotent)\n
70. Al-Muqtadir (The Powerful)\n
71. Al-Muqaddim (The Expediter)\n
72. Al-Mu\'akhkhir (The Delayer)\n
73. Al-Awwal (The First)\n
74. Al-Akhir (The Last)\n
75. Az-Zahir (The Manifest)\n
76. Al-Batin (The Hidden)\n
77. Al-Wali (The Sole Ruler)\n
78. Al-Muta\'ali (The Self Exalted)\n
79. Al-Bar (The Source of All Goodness)\n
80. At-Tawwab (The Ever-Pardoning)\n
81. Al-Muntaqim (The Avenging)\n
82. Al-\'Afuww (The Pardoner)\n
83. Ar-Ra\'uf (The Most Kind)\n
84. Al-Malikul-Mulk (The Master of the Kingdom)\n
85. Dhul-Jalali wal-Ikram (The Lord of Glory and Honour)\n
86. Al-Muqsit (The Just)\n
87. Al-Jami\' (The Gatherer, The Uniter)\n
88. Al-Ghaniyy (The Self-Sufficient)\n
89. Al-Mughni (The Enricher)\n
90. Al-Mani\' (The Withholder)\n
91. Ad-Darr (The Distresser)\n
92. An-Nafi\' (The Propitious)\n
93. An-Nur (The Light)\n
94. Al-Hadi (The Guide)\n
95. Al-Badi\' (The Incomparable)\n
96. Al-Baqi (The Ever-Surviving)\n
97. Al-Waris (The Inheritor)\n
98. Ar-Rashid (The Guide to the Right Path)\n
99. As-Sabur (The Patient)\n
</string>

</resources>